--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -6,8 +6,8 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts",
-    "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
+    "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
+    "dev": "tsup src/index.tsx --format esm,cjs --dts --external react --watch",
     "lint": "eslint src/**/*.ts* --fix"
   },
   "keywords": [],
@@ -17,6 +17,9 @@
     "@ignite-ui/tokens": "*",
     "@ignite-ui/ts-config": "*",
     "@rocketseat/eslint-config": "*",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "react": "^18.2.0",
     "tsup": "^6.6.3",
     "typescript": "^4.9.5"
   }
